# neo4j-haystack

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/worflows/: ci.yml
.github/workflows/: api-docs.yml  ci.yml  release.yml  test.yml
changelog/: index.html
data/: movies.json
docs/reference/: errors.md  filters.md  neo4j_client.md  neo4j_query_reader.md  neo4j_query_writer.md  neo4j_retriever.md  neo4j_store.md
docs/reference/components/: utils.md
docs/reference/metadata_filter/: neo4j_query_converter.md  parser.md
docs/reference/serialization/: query_parameters_marshaller.md  types.md
examples/: better_retrieval_via_embedding_retrieval.py  indexing_pipeline.py  rag_pipeline.py  rag_pipeline_cypher.py
examples/rag-parent-child/: indexing-pipeline.py  rag-pipeline.py
license/: index.html
reference/errors/: index.html
reference/filters/: index.html
reference/metadata_filter/neo4j_query_converter/: index.html
reference/metadata_filter/parser/: index.html
reference/neo4j_client/: index.html
reference/neo4j_query_reader/: index.html
reference/neo4j_query_writer/: index.html
reference/neo4j_retriever/: index.html
reference/neo4j_store/: index.html
reference/serialization/query_parameters_marshaller/: index.html
reference/serialization/types/: index.html
scripts/: load_movies.py  setup.sh
search/: search_index.json
src/neo4j_haystack/: __init__.py  errors.py
src/neo4j_haystack/client/: __init__.py  neo4j_client.py  neptune_client.py
src/neo4j_haystack/components/: __init__.py  neo4j_query_reader.py  neo4j_query_writer.py  neo4j_retriever.py  utils.py
src/neo4j_haystack/document_stores/: __init__.py  errors.py  filters.py  labels.py  neo4j_client.py  neo4j_store.py  utils.py
src/neo4j_haystack/metadata_filter/: __init__.py  neo4j_query_converter.py  parser.py
src/neo4j_haystack/serialization/: __init__.py  query_parameters_marshaller.py  types.py
stylesheets/: mkdocstrings.css
tests/: __init__.py
tests/integration/neo4j_haystack/document_stores/: conftest.py  test_document_store.py
tests/integration/neo4j_haystack/document_stores/samples/: movies.json
tests/neo4j_haystack/: conftest.py
tests/neo4j_haystack/client/: test_client_config.py
tests/neo4j_haystack/components/: test_neo4j_dynamic_retriever.py  test_neo4j_query_reader.py  test_neo4j_query_writer.py  test_neo4j_retriever.py
tests/neo4j_haystack/document_stores/: test_client_config.py  test_ds_extended.py  test_ds_filters.py  test_ds_protocol.py  test_filters.py
tests/neo4j_haystack/metadata_filter/: test_filters.py
tests/unit/neo4j_haystack/document_stores/: test_filters.py
